2010-09-10  Noel O'Boyle

	* src/formats/pdbqtformat.cpp: Remove "ent" designation as this is
	already used by the .pdb file format.

2010-09-09  Noel O'Boyle

	* scripts/python/pybel_py*.x.py: Synch with cinfony. Add support for
	MCDL 2D coordinate generation when calling 'draw()'. MCDL is the
	default. To use	OASA, specify method="oasa".

2010-09-07  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/base.h: Add new UNUSED() macro for unused
	parameters.

	* include/openbabel/forcefield.h: Use it.

	* src/kekulize.cpp: Decrease recursion level from 31 to
	24. Prevents some crashing / "infinite" loops on large fused-ring
	systems.

	* src/formats/pdbqtformat.cpp: Add new format from Stuart
	Armstrong, InHiBOx.

	* src/formats/CMakeLists.txt: Ditto.

2010-08-26 Noel O'Boyle

	* src/formats/mdlformat.cpp: Chris beat me to one fix (see below), but
	I also added code to handle unspecified cis/trans stereo
	* test/testsym.cpp: Correct test results and add some new ones for the
	-as option (with 0D MDL).

2010-08-26 Chris Morley

	* src/depict/depict.cpp(DrawMolecule): fix so works with empty molecules
	* src/formats/gamessukformat.cpp: fix typo
	* src/formats/mdlformat.cpp: -as needs OBConversion::INOPTIONS
	* src/obmolecformat.cpp: make -C option work again

2010-08-24  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/generic.h, src/generic.cpp: Improve on
	functionality for OBOrbitalData -- including convenience functions
	for loading lists of orbital energies.

	* src/formats/gamessformat.cpp: Use it (closed-shell
	calculations for now).

	* src/formats/gaussformat.cpp: Grab new "z-matrix orientation"
	coordinates given sometimes by Gaussian 09. Also add some
	OBOrbitalData support.

2010-08-24 Chris Morley

	* src/format/mdlformat.cpp: add -aP format to read only title
	and properties only. Speeds up filtering of sdf datasets based on
	their properties.

	* src/ops/opisomorph.cpp: "extract" parameter on -s option to